<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounditem"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbltopicprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/lblprofile"
            android:textAlignment="center"
            android:textColor="@color/colsecondarycolor"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imgprofilepic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/profilephoto" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/lblnameprofile"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="336dp"
            android:layout_height="43dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/lbluser" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/lbladdress"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/txtaddress" />

        <TextView
            android:id="@+id/lblcontactmo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/lblcontactnu"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/txtcontactno" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="406dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/navhome"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/navnotifi"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/notifications" />

            <ImageView
                android:id="@+id/navprofile"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/profilepage" />

            <ImageView
                android:id="@+id/navcart"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/cartblack" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>