<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounditem"
    tools:context=".Gifts">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="155dp"
        android:layout_height="61dp"
        android:fontFamily="@font/alike"
        android:text="@string/lblgifts"
        android:textColor="@color/colsecondarycolor"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ImageView
        android:id="@+id/imgteddygift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/teddy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imgbaggift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/imgteddygift"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.052" />

    <ImageView
        android:id="@+id/imgchocogift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/choco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgteddygift"
        app:layout_constraintVertical_bias="0.215" />

    <ImageView
        android:id="@+id/imgshoesgift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/shoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/imgchocogift"
        app:layout_constraintTop_toBottomOf="@+id/imgbaggift"
        app:layout_constraintVertical_bias="0.215" />

    <ImageView
        android:id="@+id/imgwatchgift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/watch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgchocogift"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itembag"
        android:textColor="@color/colblack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgchocogift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgteddygift"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblbag"
        android:textColor="@color/colblack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgshoesgift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imgbaggift"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/itemChoco"
        android:textColor="@color/colblack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgchocogift" />

    <ImageView
        android:id="@+id/imgmuggift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/mugs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/imgwatchgift"
        app:layout_constraintTop_toBottomOf="@+id/imgshoesgift"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/itemshoes"
        android:textColor="@color/colblack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/imgshoesgift" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="19dp"
        android:text="@string/itemwatch"
        android:textColor="@color/colblack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgwatchgift"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblmugs"
        android:textColor="@color/colblack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/imgmuggift"
        app:layout_constraintVertical_bias="0.421" />

</androidx.constraintlayout.widget.ConstraintLayout>